--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "axios": "^1.6.4",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "gapi": "^0.0.3",
     "googleapis": "^129.0.0",
     "https-browserify": "^1.0.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
