--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tw-elements": "^1.1.0",
+    "tw-elements-react": "^1.0.0-alpha2",
     "url": "^0.11.3",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
